Add problem set display as simple html
Problem sets can now be viewed as simple html. Teachers can access this
view through the download button on problem set details. Displaying of
solutions is determined with a GET parameter ?solutions=visible.

This display adapts the formatting of the former /izpit view.

Closes #221

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -44,6 +44,12 @@
                 {# Translators: Datoteke z rezultati #}
                 {% trans "Files with results" %}
             </a></li>
+            <li><a href="{% url 'problem_set_html' problem_set.pk %}">
+                {% trans "HTML without solutions" %}
+            </a></li>
+            <li><a href="{% url 'problem_set_html' problem_set.pk %}?solutions=visible">
+                {% trans "HTML with solutions" %}
+            </a></li>
           </ul>
 			<div class="btn-group btn-group-sm" role="group" aria-label="{% trans 'Update' %}">
 				<button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_update' problem_set.pk %}" aria-label="Update"
