--- a/web/templates/courses/problem_set_html.html
+++ b/web/templates/courses/problem_set_html.html
@@ -1,9 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ problem_set.title }}</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open Sans:300,400,700,300italic,400italic,700italic" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">      
+    <link href="{% static 'css/tomo.css' %}" rel="stylesheet">
   </head>
 
   <body>
@@ -23,13 +29,18 @@
       {% for part in problem.parts.all %}
         <h3>{{ forloop.counter }}. podnaloga</h3>
         {{ part.description|latex_markdown }}
-        <h4>Uradna rešitev</h4>
-        <pre>{{ part.solution }}</pre>
+		{% if print_solution %}
+		<h4>Uradna rešitev</h4>
+		<pre>{{ part.solution }}</pre>
+		{% endif %}
       {% endfor %}
     {% endfor %}
 
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>    
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
+    <script src="{% static 'js/tomo.js' %}"></script>
     <script type="text/javascript">
       $(document).ready(function() {
         $("pre").each(function() {
