--- a/web/templates/help_students.html
+++ b/web/templates/help_students.html
@@ -7,66 +7,67 @@
  
 {% block navigation-left %} 
 <a class="navbar-brand topnav" href="{% url 'help' %}">{% trans 'Help' %}</a>
-<a class="navbar-brand topnav" href="{% url 'help_students' %}">Navodila za učence</a>
+<a class="navbar-brand topnav" href="{% url 'help_students' %}">{% trans 'Help for students' %}</a>
 {% endblock %}
 
 
 {% block content %}
 <div class="content-section-a tomo-top-section"><div class="container">
 {% filter latex_markdown %}
-<h1>Delo v sistemu</h1>
 
-<p>V sistem se prijavimo preko Facebook, Google ali Twitter računa oziroma z uporabniškim  imenom in geslom, ki nam je bilo dodeljeno.</p>
+<h1>{% trans 'Using the system' %}</h1>
+
+<p>{% trans 'You may sign in with Facebook, Google or Twitter account or with the assigned username and password.' %}</p>
  
-<p>Po uspešni prijavi se nam pokaže seznam predmetov, ki so v sistemu. Na vrhu seznama vidimo predmete, ki smo jih že dodali med priljubljene. To pomeni, da je naše ime na seznamu udeležencev (učencev) in da učitelj predmeta lahko pregleduje naše rešitve nalog. Predmeti, ki smo jih dodali na seznam priljubljenih, so označeni z <img style="max-width: 80%" src="{% static 'img_help/ikona_vpisan_v_predmet.png' %}" alt="Ikona Sledimo predmetu.">. Predmet dodamo med priljubljene s klikom na <img style="max-width: 80%" src="{% static 'img_help/ikona_ni_vpisan_v_predmet.png' %}" alt="Ikona Ne sledimo predmetu."></p>
+<p>{% trans 'List of courses appears after successful login. On the top are the pinned courses, meaning the teacher can examine your submissions. These courses are marked with' %}<img style="max-width: 80%" src="{% static 'img_help/ikona_vpisan_v_predmet.png' %}" alt="Ikona Sledimo predmetu.">.{% trans 'You can pin a course by clicking on ' %}<img style="max-width: 80%" src="{% static 'img_help/ikona_ni_vpisan_v_predmet.png' %}" alt="Ikona Ne sledimo predmetu."></p>
 
 <!-- Slika 1: Predmet, v katerega smo že vpisani in predmet, v katerega še nismo vpisani. -->
 
-<p>Pri predmetih, v katere smo že vpisani, vidimo zadnje tri sklope. Poleg vsakega sklopa je  zabeleženo, kolikšen delež nalog v tem sklopu smo že rešili tako, da so naše rešitve sprejete.</p>
+<p>{% trans 'Last three problem sets of each pinned course are shown. Percentage of accepted submissions is indicated next to the problem sets.' %}</p>
 
-<h2>Predmeti, sklopi in naloge</h2>
+<h2>{% trans 'Courses, problem sets and problems' %}</h2>
 
-<p>Ko odpremo predmet, vidimo seznam sklopov nalog. Sklopi ponavadi zajemajo naloge podobne sorte. Ko odpremo sklop, najprej vidimo uvodno besedilo, v katerem so običajno razloženi osnovni ukazi, obravnavani v sklopu, temu pa sledijo posamezne naloge. Naloge so med seboj neodvisne, vsaka pa je sestavljena iz ene ali več podnalog, ki običajno gradijo ena na drugi in so postopoma težje.</p>
+<p>{% trans 'Opening a course, you are presented with a list of problem sets. A problem set usually unites similar problems. At the top of each problem set there is an introductory text about the discussed concepts, followed by the problems. Problems are independent and contain one or more corellated subproblems which are generally sorted by difficulty.' %}</p>
 
 <!-- Slika 2: Stran posameznega sklopa. -->
 
-<h2>Reševanje nalog</h2>
+<h2>{% trans 'Solving the problems' %}</h2>
 
-<p>Izberemo nalogo, ki jo želimo reševati in s strežnika s klikom na gumb <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_datoteko_ucenec.png' %}" alt="Gumb Prenesi datoteko."> prenesemo Python datoteko na svoj računalnik. Če želimo, lahko s klikom na gumb <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_vse_datoteke_ucenec.png' %}" alt="Gumb Prenesi vse datoteke."> prenesemo tudi ZIP datoteko, ki vsebuje datoteke vseh nalog v ustreznem sklopu.</p>
-<p>V datoteki je besedilo naloge in podnalog, zapisano kot komentar. Med besedilom je prazen prostor, v katerega bomo vpisali rešitve.</p>
+<p>{% trans 'Download the desired problem by clicking on' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_datoteko_ucenec.png' %}" alt="Gumb Prenesi datoteko."> {% trans 'You may also download the entire set as a ZIP file with' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_vse_datoteke_ucenec.png' %}" alt="Gumb Prenesi vse datoteke.">.</p>
+<p>{% trans 'A problem file is an ordinary Python file containing commented instructions. Instructions are separated with a blank space where you write the solution code.' %}</p>
 
 <!-- Slika 3: Primer datoteke z nalogo. -->
 
-<p>Ko rešitve vpišemo v datoteko, datoteko poženemo (v IDLE s klikom na Run oziroma s klikom na F5). Ob zagonu se s pomočjo testov, ki jih je v naprej pripravil učitelj, preveri pravilnost naloge. Rezultati testov se bodo izpisali v ukazni lupini.</p>
+<p>{% trans 'After you are finished with the solution run the file (in IDLE this is achieved by clicking on Run or pressing F5). This fires the tests written by the teacher and checks whether your solution is correct. Test results are then displayed in the shell.' %}</p>
 
 <!-- Slika 4: Primer delno izpolnjene rešitve in strežnikovega odziva. -->
 
-<p>Ko datoteko poženemo, se naše rešitve shranijo na strežnik - ne glede na pravilnost. To pomeni, da reševanje lahko nadaljujemo kasneje, na drugem računalniku. Ko se bomo ponovno prijavili v sistem in prenesli datoteko z že reševano nalogo, bodo v datoteki tudi naše rešitve.</p>
+<p>{% trans 'Each time you run the file the solution is stored on the server, regardless of its correctness. This means you can continue solving the problem on another system. Downloaded files will already contain your partial solutions.' %}</p>
 
-<h2>Ogled rešitev in napredka</h2>
+<h2>{% trans 'Examining solutions and progress' %}</h2>
 
-<p>Svoje rešitve določene naloge vidimo, če kliknemo na gumb <img style="max-width: 80%" src="{% static 'img_help/gumb_prikazi_resitve.png' %}" alt="Gumb Prikaži rešitve."> ob imenu naloge. Odpre se nam nova stran, kjer so na levi strani zaslona prikazane naše rešitve, na desni pa rešitve tistega, ki je nalogo sestavil.</p>
+<p>{% trans 'Clicking' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prikazi_resitve.png' %}" alt="Gumb Prikaži rešitve."> {% trans 'next to problem name, your solutions are displayed on the left and official solutions on the right.' %}</p>
 
 <!-- Slika 5: Primerjava z uradno rešitvijo. -->
 
-<p>Vidnost uradnih rešitev določa učitelj predmeta. Skrbnik lahko določi, da uradne rešitve vidimo:
+<p>{% trans 'Visibility of official solutions is determined by the teacher. Official solutions may be shown:' %}
     <ul>
-        <li>tudi, če naša rešitev ni sprejeta (kot na zgornji sliki),</li>
-        <li>po tem, ko je naša rešitve sprejeta (najpogosteje) ali</li> 
-        <li>v nobenem primeru.</li>
+        <li>{% trans 'always, even when your solution is incorrect (as on the image above),' %}</li>
+        <li>{% trans 'only after your solution has been accepted (most common option) or'%}</li> 
+        <li>{% trans 'never.' %}</li>
     </ul>
 </p>
 
-<p>Ko je naša rešitev podnaloge sprejeta, se ob naslovu podnaloge izriše zelena ikona. Če smo podnalogo poskusili reševati, vendar rešitev ni pravilna, se izriše rdeča ikona. Tako na prvi pogled vidimo, katere podnaloge moramo še rešiti.</p>
+<p>{% trans 'A green icon appears when your solution is accepted. In case you have tried to solve a problem without success a red icon appears. This way you can easily see which subproblems are yet to be solved.' %}</p>
 
 <!-- Slika 6: Ikone, ki označujejo sprejetost rešitev in obarvanost naslova naloge. -->
 
-<p>Tudi naslov naloge se bo obarval glede na rešenost podnalog:
+<p>{% trans 'Problem title is coloured based on number of solved subproblems as well:' %}
     <ul>
-        <li>Dokler nismo oddali nobene podnaloge, bo naslov sive barve.</li>
-        <li>Če je ena od podnalog rešena nepravilno, se ozadje naslova naloge obarva rdeče (kot na zgornji sliki).</li> 
-        <li>Če še nismo rešili vseh podnalog, že rešene pa so sprejete, bo naslov naloge obarvan rumeno.</li>
-        <li>Ko so sprejete rešitve vseh podnalog, se ozadje naslova naloge obarva zeleno.</li>
+        <li>{% trans 'Gray untill the first submission.' %}</li>
+        <li>{% trans 'Red if one of the subproblems is solved wrongly.' %}</li> 
+        <li>{% trans 'Yellow if all up to now submitted subproblems are correct.' %}</li>
+        <li>{% trans 'Green if all subproblems are correctly solved.' %}</li>
     </ul>
 </p>
 {% endfilter %}
