Popravljeni prevodi gumbov
Closes #122

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -25,12 +25,12 @@
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="{% url 'problem_set_attempt' problem_set.pk %}">
-                {# Translators: Datoteke za reševanje #}
-                {% trans "Files for solving" %}
+                {# Translators: Datoteke za učence #}
+                {% trans "Student files" %}
             </a></li>
             <li><a href="{% url 'problem_set_edit' problem_set.pk %}">
-                {# Translators: Datoteke za urejanje #}
-                {% trans "Files for editing" %}
+                {# Translators: Datoteke za učitelje #}
+                {% trans "Teacher files" %}
             </a></li>
             <li><a href="{% url 'problem_set_tex' problem_set.pk %}">
                 {# Translators: LaTeX datoteke #}
