Spremenil prikaz učenceve in uradne rešitve tako, da se pokažeta ena zraven druge samo na 'velikih' zaslonih (>1200px)

--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -41,7 +41,7 @@
                 <p>{{ forloop.counter }}. {% trans 'part' %}</p>
               {% endif %}
               <div class="row">
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-lg-6">
                   <div class="tomo-solution-user">
                     <div class="tomo-solution-valid">
                       {% if part.attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
@@ -68,7 +68,7 @@
                   </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-lg-6">
                   <div class="tomo-solution-official">
                     {# Translators: Title of official solutions column. #}
                     {% trans 'Official solution' %}<br>
