--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -167,12 +167,19 @@ margin-left: 30px; margin-bottom: 5px;}
 .tomo-overview-student-date { text-align: right; padding: 2px !important; padding-right: 16px !important; }
 
 .tomo-task-solutions { margin-top: 2em; }
-.tomo-task-solutions .tomo-pre { white-space: pre-wrap; font-family: monospace; background-color: #f5f5f5;
+.tomo-task-solutions .tomo-pre {
+    overflow: auto;
+    white-space: pre;
+    padding: 5px 7px;
+    padding-bottom: 15px; /* space for the scrollbar */
+    font-family: monospace;
+    background-color: #f5f5f5;
     border: 1px solid #ccc;
     height: 100%;
     font-weight: 300;
     font-size: 0.8em;
-    border-radius: 4px; padding: 5px 7px; }
+    border-radius: 4px;
+}
 .tomo-message {
     /*color: #D7A02C;*/
     /*position: absolute;*/
