Better name for a save button

--- a/web/templates/courses/problemset_form.html
+++ b/web/templates/courses/problemset_form.html
@@ -27,8 +27,8 @@
         <div class="modal-footer">
         <button type="submit" class="btn btn-primary">
         {% if form.instance.pk %}
-            {# Translators: edit problem form button. #}
-            {% trans "Edit" %}
+            {# Translators: edit problem confirmation form button. #}
+            {% trans "Save" %}
         {% else %}
             {# Translators: add new problem form button. #}
             {% trans "Add" %}
