--- a/web/templates/courses/coursegroup_form.html
+++ b/web/templates/courses/coursegroup_form.html
@@ -12,7 +12,7 @@
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		    <h4 class="modal-title">
 		    	{% if form.instance.pk %}
-		  			{# Translators: Title of editing form for problems sets. #}
+						{# Translators: Title of editing form for problem sets. #}
 		    		{% trans "Edit course group" %} <em>{{ form.instance.title }}</em>
 	  			{% else %}
 	  				{# Translators: Title of 'add new problem set' form. #}
