--- a/web/templates/help_students.html
+++ b/web/templates/help_students.html
@@ -7,7 +7,7 @@
  
 {% block navigation-left %} 
 <a class="navbar-brand topnav" href="{% url 'help' %}">{% trans 'Help' %}</a>
-<a class="navbar-brand topnav" href="{% url 'help_students' %}">{% trans 'Help for students' %}</a>
+<a class="navbar-brand topnav" href="{% url 'help_students' %}">{% trans 'Help (Students)' %}</a>
 {% endblock %}
 
 
@@ -17,57 +17,57 @@
 
 <h1>{% trans 'Using the system' %}</h1>
 
-<p>{% trans 'You may sign in with Facebook, Google or Twitter account or with the assigned username and password.' %}</p>
+<p>{% trans 'You may sign in with Facebook, Google or Twitter account, or with the username and password you have received.' %}</p>
  
-<p>{% trans 'List of courses appears after successful login. On the top are the pinned courses, meaning the teacher can examine your submissions. These courses are marked with' %}<img style="max-width: 80%" src="{% static 'img_help/ikona_vpisan_v_predmet.png' %}" alt="Ikona Sledimo predmetu.">.{% trans 'You can pin a course by clicking on ' %}<img style="max-width: 80%" src="{% static 'img_help/ikona_ni_vpisan_v_predmet.png' %}" alt="Ikona Ne sledimo predmetu."></p>
+<p>{% trans 'After successful login a list of courses appears. On the top are the starred courses. This means the teacher can examine your submissions. These courses are marked with' %}<img style="max-width: 80%" src="{% static 'img_help/ikona_vpisan_v_predmet.png' %}" alt="Ikona Sledimo predmetu.">.{% trans 'You can pin a course by pressing ' %}<img style="max-width: 80%" src="{% static 'img_help/ikona_ni_vpisan_v_predmet.png' %}" alt="Ikona Ne sledimo predmetu."></p>
 
 <!-- Slika 1: Predmet, v katerega smo že vpisani in predmet, v katerega še nismo vpisani. -->
 
-<p>{% trans 'Last three problem sets of each pinned course are shown. Percentage of accepted submissions is indicated next to the problem sets.' %}</p>
+<p>{% trans 'Shown are the last three problem sets of each starred course. The percentage of accepted submissions is indicated next to the problem sets.' %}</p>
 
 <h2>{% trans 'Courses, problem sets and problems' %}</h2>
 
-<p>{% trans 'Opening a course, you are presented with a list of problem sets. A problem set usually unites similar problems. At the top of each problem set there is an introductory text about the discussed concepts, followed by the problems. Problems are independent and contain one or more corellated subproblems which are generally sorted by difficulty.' %}</p>
+<p>{% trans 'Upon opening a course, you are presented with a list of problem sets. A problem set usually encompasses similar problems. At the top of each problem set there is an introductory text about the discussed concepts, followed by the problems. Problems are independent and contain one or more corellated subproblems, that usually build upon each other and increase in difficulty.' %}</p>
 
 <!-- Slika 2: Stran posameznega sklopa. -->
 
 <h2>{% trans 'Solving the problems' %}</h2>
 
-<p>{% trans 'Download the desired problem by clicking on' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_datoteko_ucenec.png' %}" alt="Gumb Prenesi datoteko."> {% trans 'You may also download the entire set as a ZIP file with' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_vse_datoteke_ucenec.png' %}" alt="Gumb Prenesi vse datoteke.">.</p>
-<p>{% trans 'A problem file is an ordinary Python file containing commented instructions. Instructions are separated with a blank space where you write the solution code.' %}</p>
+<p>{% trans 'Download the desired problem by pressing' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_datoteko_ucenec.png' %}" alt="Gumb Prenesi datoteko."> {% trans 'You may also download the entire set as a ZIP file with' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prenesi_vse_datoteke_ucenec.png' %}" alt="Gumb Prenesi vse datoteke.">.</p>
+<p>{% trans 'A problem file is an ordinary Python file containing commented instructions. Instructions are separated with a blank space where you can write the solution code.' %}</p>
 
 <!-- Slika 3: Primer datoteke z nalogo. -->
 
-<p>{% trans 'After you are finished with the solution run the file (in IDLE this is achieved by clicking on Run or pressing F5). This fires the tests written by the teacher and checks whether your solution is correct. Test results are then displayed in the shell.' %}</p>
+<p>{% trans 'After writing down the solution, run the file (in IDLE this is achieved by pressing Run or pressing F5). This fires the tests written by the teacher and checks whether your solution is correct. Test results are then displayed in the command shell.' %}</p>
 
 <!-- Slika 4: Primer delno izpolnjene rešitve in strežnikovega odziva. -->
 
-<p>{% trans 'Each time you run the file the solution is stored on the server, regardless of its correctness. This means you can continue solving the problem on another system. Downloaded files will already contain your partial solutions.' %}</p>
+<p>{% trans 'The solution is stored on the server each time you run the file, regardless of its validity. This means you can continue working on the problem on another device. After logging-in and downloading the files, the file will also contain your partial solutions.' %}</p>
 
-<h2>{% trans 'Examining solutions and progress' %}</h2>
+<h2>{% trans 'Displaying solutions and progress' %}</h2>
 
-<p>{% trans 'Clicking' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prikazi_resitve.png' %}" alt="Gumb Prikaži rešitve."> {% trans 'next to problem name, your solutions are displayed on the left and official solutions on the right.' %}</p>
+<p>{% trans 'After pressing' %} <img style="max-width: 80%" src="{% static 'img_help/gumb_prikazi_resitve.png' %}" alt="Gumb Prikaži rešitve."> {% trans 'next to problem title, your solutions are displayed on the left and official solutions on the right.' %}</p>
 
 <!-- Slika 5: Primerjava z uradno rešitvijo. -->
 
-<p>{% trans 'Visibility of official solutions is determined by the teacher. Official solutions may be shown:' %}
+<p>{% trans 'The teacher decides which official solutions are visible. They may also decide that the official solutions are shown:' %}
     <ul>
-        <li>{% trans 'always, even when your solution is incorrect (as on the image above),' %}</li>
+        <li>{% trans 'always, even if your solution is incorrect (as in the image above),' %}</li>
         <li>{% trans 'only after your solution has been accepted (most common option) or'%}</li> 
         <li>{% trans 'never.' %}</li>
     </ul>
 </p>
 
-<p>{% trans 'A green icon appears when your solution is accepted. In case you have tried to solve a problem without success a red icon appears. This way you can easily see which subproblems are yet to be solved.' %}</p>
+<p>{% trans 'When your solution is accepted a green icon appears. If your attempted solution in invalid, a red icon appears. This way you can easily see which subproblems are yet to be solved.' %}</p>
 
 <!-- Slika 6: Ikone, ki označujejo sprejetost rešitev in obarvanost naslova naloge. -->
 
-<p>{% trans 'Problem title is coloured based on number of solved subproblems as well:' %}
+<p>{% trans 'The problem title is also coloured based on the number of solved subproblems:' %}
     <ul>
-        <li>{% trans 'Gray untill the first submission.' %}</li>
-        <li>{% trans 'Red if one of the subproblems is solved wrongly.' %}</li> 
-        <li>{% trans 'Yellow if all up to now submitted subproblems are correct.' %}</li>
-        <li>{% trans 'Green if all subproblems are correctly solved.' %}</li>
+        <li>{% trans 'Gray, untill the first submission.' %}</li>
+        <li>{% trans 'Red, if one of the subproblems is solved incorrectly.' %}</li> 
+        <li>{% trans 'Yellow, if all up to now submitted subproblems are valid.' %}</li>
+        <li>{% trans 'Green, if all subproblem solutions are valid.' %}</li>
     </ul>
 </p>
 {% endfilter %}
