--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -208,6 +208,10 @@
               <h5>{{ forloop.counter }}. {% trans "part" %}</h5>
               {% endif %}
               <p>{{ part.guarded_description|latex_markdown }}</p>
+			  {% if show_teacher_forms %}
+			  <a href="/problems/view_all/{{part.id}}"> Preglej vse rešitve učencev </a><br>
+			  <a href='problem/{{problem.id}}/casovnica'>Časovnica oddaj</a>
+			  {% endif %}
             </li>
             {% endfor %}
           </ul>
